[project]
name = "lprnnanketbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "xlsxwriter>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
